# cli-backend

./: .gitignore  README.md  deploy.sh  docker-compose.yml
.github/workflows/: deploy.yml  test.yml
docker-registry/: .gitignore  Dockerfile  config.yml  docker-compose.yml  fly.toml
notification-server/: .gitignore  Cargo.toml  Dockerfile  fly.toml  start.sh
notification-server/src/: email.rs  main.rs  sprite.rs  tigris.rs
