[package]
name = "notification-server"
version = "0.1.0"
edition = "2021"
authors = ["Nyakio Maina"]
description = "Rust notification server for Lane CLI webhook handling and build automation"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.3"
rust-s3 = { version = "0.32", features = ["with-tokio"] }